--- a/package.json
+++ b/package.json
@@ -61,8 +61,22 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
+    "@reduxjs/toolkit": "^1.9.7",
+    "antd": "^5.10.0",
     "clsx": "^1.2.1",
+    "i18n": "^0.15.1",
+    "i18next": "^23.5.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-i18next": "^13.2.2",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.16.0",
+    "sass": "^1.69.2",
+    "styled-components": "^6.0.8"
   }
 }
