--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.8",
+    "@types/react-datepicker": "^4.19.0",
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
@@ -71,6 +72,7 @@
     "i18n": "^0.15.1",
     "i18next": "^23.5.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-i18next": "^13.2.2",
